--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "chart.js": "^4.4.6",
     "clsx": "^2.1.1",
+    "expensetracker": "file:..",
     "framer-motion": "^11.11.11",
     "graphql": "^16.9.0",
     "mini-svg-data-uri": "^1.4.4",
