--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@apollo/server": "^4.10.0",
+    "@apollo/server": "^4.11.2",
     "@graphql-tools/merge": "^9.0.8",
     "@graphql-tools/utils": "^10.5.6",
+    "@josephg/resolvable": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
